--- a/index.html
+++ b/index.html
@@ -225,7 +225,9 @@
     <!-- =================== HEADER =================== -->
     <header id="top">
       <div class="container nav">
-        <a href="#top" class="brand">thanh<span class="dot">.</span>dui</a>
+        <a href="#top" class="brand">
+          <img src="./assets/logo.svg" alt="Logo Thanh Duy" class="logo-svg" />
+        </a>
 
         <nav aria-label="Chuyển tới phần">
           <ul id="mainNav">
@@ -361,8 +363,7 @@
 
           <div class="avatar-card">
             <div class="avatar-wrap" aria-hidden="true">
-              <div class="avatar">TD</div>
-              <div class="avatar-sub">Ảnh đại diện (placeholder)</div>
+              <img src="assets/avatar.jpg" alt="Thanh Duy" class="avatar-img" />
             </div>
           </div>
         </div>
@@ -391,7 +392,7 @@
                 trình phát triển và tạo ra những sản phẩm có chất lượng cao, dễ
                 bảo trì và mở rộng.
               </p>
-            </div>       
+            </div>
           </div>
 
           <!-- Right: Info Card -->
@@ -619,13 +620,17 @@
           <article class="project">
             <div class="project-media">
               <div class="mockup">
-                <span>Ảnh demo</span>
+                <img src="assets/project_veltra.png" alt="Veltra Project" />
               </div>
             </div>
             <div class="project-body">
               <div class="project-header">
                 <span class="year-badge">2024</span>
-                <a class="bubble bubble--github" title="GitHub"
+                <a
+                  class="bubble bubble--github"
+                  href="https://github.com/duypipi/Veltra-frontend-reactjs"
+                  title="GitHub"
+                  target="_blank"
                   ><img
                     alt="GitHub"
                     src="https://cdn.simpleicons.org/github/FFFFFF"
@@ -667,13 +672,17 @@
           <article class="project project--alt">
             <div class="project-media">
               <div class="mockup">
-                <span>Ảnh demo</span>
+                <img src="assets/project_sevina.png" alt="Sevina Project" />
               </div>
             </div>
             <div class="project-body">
               <div class="project-header">
-                <span class="year-badge">2024</span>
-                <a class="bubble bubble--github" title="GitHub"
+                <span class="year-badge">2025</span>
+                <a
+                  class="bubble bubble--github"
+                  href="https://github.com/duypipi/Sevina-frontend-reactjs"
+                  title="GitHub"
+                  target="_blank"
                   ><img
                     alt="GitHub"
                     src="https://cdn.simpleicons.org/github/FFFFFF"
@@ -714,19 +723,23 @@
           <article class="project">
             <div class="project-media">
               <div class="mockup">
-                <span>Ảnh demo</span>
+                <img src="assets/project_preziq.png" alt="PreziQ! Project" />
               </div>
             </div>
             <div class="project-body">
               <div class="project-header">
                 <span class="year-badge">2025</span>
-                <a class="bubble bubble--github" title="GitHub"
+                <a
+                  class="bubble bubble--github"
+                  href="https://github.com/duypipi/PreziQ-frontend-nextjs"
+                  title="GitHub"
+                  target="_blank"
                   ><img
                     alt="GitHub"
                     src="https://cdn.simpleicons.org/github/FFFFFF"
                 /></a>
               </div>
-              <h3 class="project-title">PreziQ</h3>
+              <h3 class="project-title">PreziQ!</h3>
               <p class="project-desc">
                 Nền tảng trắc nghiệm &amp; trình chiếu tương tác, xây dựng bằng
                 Next.js, TypeScript, Tailwind CSS và triển khai trên Vercel.
@@ -760,13 +773,17 @@
           <article class="project project--alt">
             <div class="project-media">
               <div class="mockup">
-                <span>Ảnh demo</span>
+                <img src="assets/project_jewelry.png" alt="Jewelry Project" />
               </div>
             </div>
             <div class="project-body">
               <div class="project-header">
                 <span class="year-badge">2025</span>
-                <a class="bubble bubble--github" title="GitHub"
+                <a
+                  class="bubble bubble--github"
+                  href="https://github.com/duypipi/Jewelry-Frontend"
+                  title="GitHub"
+                  target="_blank"
                   ><img
                     alt="GitHub"
                     src="https://cdn.simpleicons.org/github/FFFFFF"
@@ -840,8 +857,8 @@
                       />
                     </svg>
                   </span>
-                  <a href="mailto:thanhdui@example.com" class="link"
-                    >thanhdui@example.com</a
+                  <a href="mailto:thanhdui214@gmail.com" class="link"
+                    >thanhdui214@gmail.com</a
                   >
                 </li>
                 <li>
@@ -853,7 +870,7 @@
                       />
                     </svg>
                   </span>
-                  <a href="tel:+84999999999" class="link">+84 999 999 999</a>
+                  <a href="tel:+84999999999" class="link">+84 384 033 014</a>
                 </li>
               </ul>
             </aside>
@@ -911,10 +928,16 @@
 
     <footer>
       <div class="container">
-        <div class="footer-grid">
+        <div class="footer-content">
           <!-- Brand Column -->
           <div class="footer-brand">
-            <div class="footer-logo">thanh<span class="dot">.</span>dui</div>
+            <div class="footer-logo">
+              <img
+                src="./assets/logo.svg"
+                alt="Logo thanh duy"
+                class="logo-svg"
+              />
+            </div>
             <p class="footer-tagline">
               Xây dựng giao diện web hiện đại với mã sạch và trải nghiệm người
               dùng tối ưu.
@@ -979,38 +1002,13 @@
           </div>
 
           <!-- Quick Links -->
-          <div class="footer-col">
-            <h4>Quick Links</h4>
+          <div class="footer-nav">
             <ul class="footer-links">
               <li><a href="#hero">Home</a></li>
               <li><a href="#about">About Me</a></li>
               <li><a href="#skills">Skills</a></li>
               <li><a href="#projects">Projects</a></li>
               <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div>
-
-          <!-- Services -->
-          <div class="footer-col">
-            <h4>Services</h4>
-            <ul class="footer-links">
-              <li><a href="#">Web Development</a></li>
-              <li><a href="#">UI/UX Design</a></li>
-              <li><a href="#">Frontend Development</a></li>
-              <li><a href="#">React Development</a></li>
-              <li><a href="#">Consulting</a></li>
-            </ul>
-          </div>
-
-          <!-- Resources -->
-          <div class="footer-col">
-            <h4>Resources</h4>
-            <ul class="footer-links">
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Documentation</a></li>
-              <li><a href="#">Case Studies</a></li>
-              <li><a href="#">Newsletter</a></li>
-              <li><a href="#">FAQ</a></li>
             </ul>
           </div>
         </div>
@@ -1021,99 +1019,10 @@
             © <span id="year"></span> <strong>Thanh Dui</strong>. Made with
             <span class="heart">❤️</span> in Vietnam
           </p>
-          <ul class="footer-links-bottom">
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms of Service</a></li>
-            <li><a href="#">Sitemap</a></li>
-          </ul>
         </div>
       </div>
     </footer>
 
-    <script>
-      // ===== Year
-      document.getElementById('year').textContent = new Date().getFullYear();
-
-      // ===== Theme toggle
-      const htmlEl = document.documentElement;
-      const themeBtn = document.getElementById('themeBtn');
-      const themeIcon = document.getElementById('themeIcon');
-      function applyTheme(theme) {
-        htmlEl.setAttribute('data-theme', theme);
-        themeIcon.textContent = theme === 'dark' ? '🌙' : '🌞';
-        localStorage.setItem('theme', theme);
-      }
-      (() => {
-        const saved = localStorage.getItem('theme');
-        if (saved) {
-          applyTheme(saved);
-        } else {
-          const prefersDark = window.matchMedia(
-            '(prefers-color-scheme: dark)'
-          ).matches;
-          applyTheme(prefersDark ? 'dark' : 'light');
-        }
-      })();
-      themeBtn.addEventListener('click', () => {
-        const next =
-          htmlEl.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
-        applyTheme(next);
-      });
-
-      // ===== Mobile drawer
-      const menuBtn = document.getElementById('menuBtn');
-      const drawer = document.getElementById('drawer');
-      menuBtn.addEventListener('click', () => drawer.classList.toggle('open'));
-      drawer.addEventListener('click', (e) => {
-        if (e.target === drawer) drawer.classList.remove('open');
-      });
-
-      // ===== Smooth scroll
-      document.querySelectorAll('a[href^="#"]').forEach((a) => {
-        a.addEventListener('click', (e) => {
-          const id = a.getAttribute('href').slice(1);
-          const el = document.getElementById(id);
-          if (el) {
-            e.preventDefault();
-            drawer.classList.remove('open');
-            window.scrollTo({
-              top: el.getBoundingClientRect().top + window.pageYOffset - 60,
-              behavior: 'smooth',
-            });
-          }
-        });
-      });
-
-      // ===== ScrollSpy
-      const spyLinks = Array.from(document.querySelectorAll('[data-spy]'));
-      const sections = spyLinks.map((l) =>
-        document.querySelector(l.getAttribute('href'))
-      );
-      const opts = { rootMargin: '-50% 0px -45% 0px', threshold: 0 };
-      const obs = new IntersectionObserver((entries) => {
-        entries.forEach((entry) => {
-          const id = entry.target.id;
-          spyLinks.forEach((a) => {
-            if (a.getAttribute('href') === '#' + id) {
-              a.classList.toggle('active', entry.isIntersecting);
-            }
-          });
-        });
-      }, opts);
-      sections.forEach((sec) => sec && obs.observe(sec));
-
-      // ===== Hero text swap
-      const swapText = document.getElementById('swapText');
-      const labels = ['Thanh Dui', 'Front-end Developer'];
-      let idx = 0;
-      setInterval(() => {
-        idx = (idx + 1) % labels.length;
-        swapText.style.opacity = 0;
-        setTimeout(() => {
-          swapText.textContent = labels[idx];
-          swapText.style.opacity = 1;
-        }, 180);
-      }, 2200);
-    </script>
+    <script src="main.js"></script>
   </body>
 </html>
