chore: Upload member avatar

--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
           <!-- Member 1 -->
           <a class="member-card" href="https://github.com/<username-4>" target="_blank" rel="noopener">
             <div class="member-photo">
-              <img src="assets/member-4.jpg" alt="Phú Thuận" loading="lazy" />
+              <img src="assets/quach-phu-thuan.jpg" alt="Phú Thuận" loading="lazy" />
             </div>
             <h3 class="member-name">Phú Thuận</h3>
           </a>
